[package]
name = "ntfs-usn"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A library to manage Update Sequence Number (USN) Journals in Windows."
repository = "https://github.com/ihsan6133/ntfs-usn"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dependencies.windows-sys]

features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
